# class

./: CMakeLists.txt  OldClass.drawio  PlanClass  Untitled Diagram.drawio
include/: Trainers.h
src/: CMakeCache.txt  Trainers.cpp  printer.cpp
